Bug 1513029 - Trackers and Cookie hover state colours are visible in Linux dark theme. r=ntim
Differential Revision: https://phabricator.services.mozilla.com/D14100

UltraBlame original commit: d1d6538796dd3f77f42ef3a69e08d631c212e8ea

--- a/browser/themes/linux/controlcenter/panel.css
+++ b/browser/themes/linux/controlcenter/panel.css
@@ -18,3 +18,8 @@
 .tracking-protection-button > .button-box > .button-icon {
   margin-inline-end: 5px;
 }
+
+
+.identity-popup-content-blocking-category:hover {
+  color: inherit;
+}
